Dido result handler and tidy up.